3.10.0/_sources/gallery/subplots_axes_and_figures/subplots_adjust.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/subplots_adjust.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_subplots_axes_and_figures_subplots_adjust.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_subplots_adjust.py:


=============================
Subplots spacings and margins
=============================

Adjusting the spacing of margins and subplots using `.pyplot.subplots_adjust`.

.. note::
   There is also a tool window to adjust the margins and spacings of displayed
   figures interactively.  It can be opened via the toolbar or by calling
   `.pyplot.subplot_tool`.

.. redirect-from:: /gallery/subplots_axes_and_figures/subplot_toolbar

.. GENERATED FROM PYTHON SOURCE LINES 15-33

.. code-block:: Python


    import matplotlib.pyplot as plt
    import numpy as np

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    plt.subplot(211)
    plt.imshow(np.random.random((100, 100)))
    plt.subplot(212)
    plt.imshow(np.random.random((100, 100)))

    plt.subplots_adjust(bottom=0.1, right=0.8, top=0.9)
    cax = plt.axes((0.85, 0.1, 0.075, 0.8))
    plt.colorbar(cax=cax)

    plt.show()




.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_subplots_adjust_001.png
   :alt: subplots adjust
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_subplots_adjust_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_subplots_adjust_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-39

.. tags::

   component: subplot
   plot-type: imshow
   level: beginner


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.193 seconds)


.. _sphx_glr_download_gallery_subplots_axes_and_figures_subplots_adjust.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: subplots_adjust.ipynb <subplots_adjust.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: subplots_adjust.py <subplots_adjust.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: subplots_adjust.zip <subplots_adjust.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
